--- a/RTE/test-output/old/Default suite/methods.html
+++ b/RTE/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78cddf">  <td>22/05/27 15:42:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEJobSearch@7d4f9aae]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@593415583</td>   <td></td> </tr>
-<tr bgcolor="81a7ac">  <td>22/05/27 15:36:58</td>   <td>-321841</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEJobSearch.rteJobSearch()[pri:0, instance:rte_RTEJobCreation.RTEJobSearch@7d4f9aae]">rteJobSearch</td> 
-  <td>main@593415583</td>   <td></td> </tr>
-<tr bgcolor="78cddf">  <td>22/05/27 15:36:28</td>   <td>-351394</td> <td title="&gt;&gt;BaseInit.beforeMethod()[pri:0, instance:rte_RTEJobCreation.RTEJobSearch@7d4f9aae]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@593415583</td>   <td></td> </tr>
-<tr bgcolor="78cddf">  <td>22/05/27 15:42:20</td>   <td>126</td> <td title="&lt;&lt;BaseInit.SendEmail()[pri:0, instance:rte_RTEJobCreation.RTEJobSearch@7d4f9aae]">&lt;&lt;SendEmail</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@593415583</td>   <td></td> </tr>
-<tr bgcolor="78cddf">  <td>22/05/27 15:36:58</td>   <td>-321852</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEJobSearch@7d4f9aae]">&gt;&gt;testMethodName</td> 
-<td>&nbsp;</td>  <td>main@593415583</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>22/05/31 17:31:16</td>   <td>0</td> <td title="&gt;&gt;BaseInit.beforeMethod()[pri:0, instance:rte_RTEJobCreation.RTEOneToManyOrderProcess@72e5a8e]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>22/05/31 17:33:05</td>   <td>109588</td> <td title="&lt;&lt;BaseInit.SendEmail()[pri:0, instance:rte_RTEJobCreation.RTEOneToManyOrderProcess@72e5a8e]">&lt;&lt;SendEmail</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>22/05/31 17:32:00</td>   <td>44159</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseInit.testMethodName(java.lang.reflect.Method)[pri:0, instance:rte_RTEJobCreation.RTEOneToManyOrderProcess@72e5a8e]">&gt;&gt;testMethodName</td> 
+<td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>22/05/31 17:33:05</td>   <td>109276</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseInit.getResult(org.testng.ITestResult)[pri:0, instance:rte_RTEJobCreation.RTEOneToManyOrderProcess@72e5a8e]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="b09ffa">  <td>22/05/31 17:32:00</td>   <td>44168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RTEOneToManyOrderProcess.rteOneToManyOrderProcess()[pri:0, instance:rte_RTEJobCreation.RTEOneToManyOrderProcess@72e5a8e]">rteOneToManyOrderProcess</td> 
+  <td>main@480490520</td>   <td></td> </tr>
 </table>
